--- a/components/users/templates/login.html
+++ b/components/users/templates/login.html
@@ -6,7 +6,7 @@
     <div style="width:85%" class="card">
         <div style='display: flex;justify-content: center;' class="card-body">
             <form method='POST' style="width:45%">
-                <p class="h4 text-center py-4">Log In</p>
+                <p class="h4 text-center pt-4">Log In</p>
                 <div class='text-center mr-5' style="color: red;">
                     {% with messages = get_flashed_messages() %}
                     {% if messages %}
@@ -18,26 +18,38 @@
                     {% endif %}
                     {% endwith %}
                 </div>
+                <hr class="pb-4">
                 {{ form.hidden_tag() }}
                 <div class="md-form">
-                    <i class="fa fa-user prefix orange-text"></i>
-                    {{ form.username(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', class='form-control', type="text", id="materialFormCardNameEx") }}
-                    <label for="materialFormCardNameEx" style='color:orangered'>Your username</label>
+                    <i class="fas fa-user prefix orange-text"></i>
+                    <label style='color:orangered' for="orangeForm-name">Your username</label>
                     {% if form.username.errors %}
-                    <ul style='list-style: none; padding-left: .5em; margin: .25em 0 0 0; color: red;' class="errors">
-                        {% for error in form.username.errors %}<li><i>{{ error }}</i></li>
-                        {% endfor %}</ul>
+                    {{ form.username(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.username.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.username(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
                     {% endif %}
                 </div>
+
                 <div class="md-form">
-                    <i class="fa fa-lock prefix orange-text"></i>
-                    {{ form.password(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', class='form-control', type="password", id="materialFormCardPasswordEx") }}
-                    <label for="materialFormCardPasswordEx" style='color:orangered'>Your password</label>
+                    <i class="fas fa-lock prefix orange-text"></i>
+                    <label style='color:orangered' for="orangeForm-name">Your password</label>
                     {% if form.password.errors %}
-                    <ul style='list-style: none; padding-left: .5em; margin: .25em 0 0 0; color: red;' class="errors">
-                        {% for error in form.password.errors %}<li><i>{{ error }}</i></li>{% endfor %}</ul>
+                    {{ form.password(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="password", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.password(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="password", id="orangeForm-name", class='form-control validate') }}
                     {% endif %}
                 </div>
+
                 <div class="text-center py-4 mt-3">
                     {{ form.submit(style='color:black;', class='btn btn-deep-orange') }}
                 </div>
