--- a/components/events/templates/create_event.html
+++ b/components/events/templates/create_event.html
@@ -13,16 +13,52 @@
     <div class="form-group d-flex justify-content-center">
         <div class="w-50">
             {{ form.hidden_tag() }}
-            {{ form.title.label(class='mt-3')}}
-            {{ form.title(class='form-control') }}
-            {{ form.start_date.label(class='mt-3')}}
-            {{form.start_date(class='form-control')}}
-            {{ form.location.label(class='mt-3')}}
-            {{ form.location(class='form-control') }}
-            {{ form.description.label(class='mt-3')}}
-            {{ form.description(rows='6', class='form-control') }}
+
+            <div class="md-form">
+                <label style='color:orangered' for="orangeForm-name">Title</label>
+                {% if form.title.errors %}
+                {{ form.title(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control is-invalid') }}
+                <div class="invalid-feedback">
+                    {% for error in form.title.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.title(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
+                {% endif %}
+            </div>
+
+            <div class="md-form">
+                {% if form.start_date.errors %}
+                {{ form.start_date(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', id="orangeForm-name", class='form-control is-invalid') }}
+                <div class="invalid-feedback">
+                    {% for error in form.start_date.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.start_date(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', id="orangeForm-name", class='form-control validate') }}
+                {% endif %}
+                <label style='color:orangered; padding-top: 20px' for="orangeForm-name">Start Date</label>
+            </div>
+            <div class="md-form">
+                <label style='color:orangered' for="orangeForm-name">Location</label>
+                {% if form.location.errors %}
+                {{ form.location(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control is-invalid') }}
+                <div class="invalid-feedback">
+                    {% for error in form.location.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.location(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
+                {% endif %}
+            </div>
+            {{ form.description.label(class='mt-3', style='color: orangered')}}
+            {{ form.description(rows='6', class='form-control', style='border-color: orangered;') }}
+
             <div style="float: right;">
-                {{ form.submit(style='float: right;', class='mt-4 btn btn-deep-orange') }}
+                {{ form.submit(style='float: right;', class='mt-4 btn btn-deep-orange black-text') }}
             </div>
         </div>
     </div>
