--- a/components/events/templates/editevent.html
+++ b/components/events/templates/editevent.html
@@ -4,32 +4,71 @@
 <div class="container">
     <form method="POST">
         <h1 class=" text-center mt-5 mb-4">Edit {{ event.title }} Event</h1>
-        {% for field in form.errors %}
-        {% for error in form.errors[field] %}
-        <div class="alert alert-error">
-            <strong>Error!</strong> {{error}}
-        </div>
-        {% endfor %}
-        {% endfor %}
         <div class="form-group d-flex justify-content-center">
             <div class="w-50">
                 {{ form.hidden_tag() }}
-                {{ form.title.label(class='mt-3')}}
-                {{ form.title(class='form-control') }}
+                <div class="md-form">
+                    <label style='color:orangered' for="orangeForm-name">Title</label>
+                    {% if form.title.errors %}
+                    {{ form.title(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.title.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.title(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
+                    {% endif %}
+                </div>
+
                 <div style="display: flex; justify-content: space-between;">
                     <div style="width:49%;">
-                        {{ form.start_date.label(class='mt-3')}}
-                        {{form.start_date(class='form-control')}}
+                        <div class="md-form">
+                            {% if form.start_date.errors %}
+                            {{ form.start_date(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', id="orangeForm-name", class='form-control is-invalid') }}
+                            <div class="invalid-feedback">
+                                {% for error in form.start_date.errors %}
+                                <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                            {% else %}
+                            {{ form.start_date(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', id="orangeForm-name", class='form-control validate') }}
+                            {% endif %}
+                            <label style='color:orangered; padding-top: 20px' for="orangeForm-name">Start Date</label>
+                        </div>
                     </div>
                     <div style="width:49%;">
-                        {{ form.end_date.label(class='mt-3')}}
-                        {{form.end_date(class='form-control')}}
+                        <div class="md-form">
+                            {% if form.end_date.errors %}
+                            {{ form.end_date(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', id="orangeForm-name", class='form-control is-invalid') }}
+                            <div class="invalid-feedback">
+                                {% for error in form.end_date.errors %}
+                                <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                            {% else %}
+                            {{ form.end_date(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', id="orangeForm-name", class='form-control validate') }}
+                            {% endif %}
+                            <label style='color:orangered; padding-top: 20px' for="orangeForm-name">End Date</label>
+                        </div>
                     </div>
                 </div>
-                {{ form.location.label(class='mt-3')}}
-                {{ form.location(class='form-control') }}
-                {{ form.description.label(class='mt-3')}}
-                {{ form.description(rows='6', class='form-control') }}
+
+                <div class="md-form">
+                    <label style='color:orangered' for="orangeForm-name">Location</label>
+                    {% if form.location.errors %}
+                    {{ form.location(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.location.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.location(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
+                    {% endif %}
+                </div>
+                {{ form.description.label(class='mt-3', style='color: orangered')}}
+                {{ form.description(rows='6', class='form-control', style='border-color: orangered;') }}
                 <div style="float: right;">
                     {{ form.submit(style='float: right;', class='mt-4 btn btn-deep-orange black-text') }}
                 </div>
@@ -37,21 +76,29 @@
         </div>
     </form>
     <hr class="mb-4 mt-4 w-75">
-    <form action='/upload_image' method="POST" enctype="multipart/form-data">
+    <form action="{{ url_for('events.upload_image', event_id=event.id)}}" method="POST" enctype="multipart/form-data">
         <h1 class=" text-center mt-5 mb-4">Upload Cover Image For {{ event.title }} Event</h1>
         <div class="d-flex justify-content-center">
-
             <div class='w-50'>
-                <div class="form-group d-flex" style="flex-direction: column;">
-                    <label>Select image</label>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="cover_img" id="cover_img">
-                        <label class="custom-file-label" for="custom_img">Select image...</label>
-                    </div>
-                </div>
-                <div style="float: right;">
-                    <button type="submit" class="btn btn-deep-orange black-text">Upload Image</button>
-                </div>
+                <form method="POST" enctype="multipart/form-data">
+                    {{ photo_form.hidden_tag() }}
+                    {{ photo_form.cover_img }}
+                    {% for error in photo_form.cover_img.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                    {{ photo_form.submit }}
+                </form>
+
+                {% if file_url %}
+                <br>
+                <img src="{{ file_url }}">
+                {% endif %}
+
+
+
+
+
+
             </div>
         </div>
     </form>
