--- a/components/users/templates/signup.html
+++ b/components/users/templates/signup.html
@@ -6,45 +6,87 @@
     <div style="width:85%; margin-bottom: 50px;" class="card">
         <div style='display: flex;justify-content: center;margin-bottom: 18px;' class="card-body">
             <form method='POST' style="width:45%">
-                <p class="h4 text-center py-4">Sign Up</p>
+                <p class="h4 text-center pt-4">Sign Up</p>
+                <hr class="pb-4">
+                {{ form.hidden_tag() }}
 
-                {% for field in signup_modal_form.errors %}
-                {% for error in signup_modal_form.errors[field] %}
-                <div class="alert alert-error">
-                    <strong>Error!</strong> {{error}}
-                </div>
-                {% endfor %}
-                {% endfor %}
-                {{ signup_modal_form.hidden_tag() }}
                 <div class="md-form">
                     <i class="fas fa-user prefix orange-text"></i>
-                    {{ signup_modal_form.name(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
                     <label style='color:orangered' for="orangeForm-name">Your name</label>
+                    {% if form.name.errors %}
+                    {{ form.name(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.name.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.name(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
+                    {% endif %}
                 </div>
+
                 <div class="md-form">
                     <i class="fas fa-user prefix orange-text"></i>
-                    {{ signup_modal_form.username(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-username", class='form-control validate') }}
-                    <label style='color:orangered' for="orangeForm-username">Your username</label>
+                    <label style='color:orangered' for="orangeForm-name">Your username</label>
+                    {% if form.username.errors %}
+                    {{ form.username(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.username.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.username(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
+                    {% endif %}
                 </div>
+
                 <div class="md-form">
                     <i class="fas fa-envelope prefix orange-text"></i>
-                    {{ signup_modal_form.email(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-email", class='form-control validate') }}
-                    <label style='color:orangered' for="orangeForm-email">Your email</label>
+                    <label style='color:orangered' for="orangeForm-name">Your email</label>
+                    {% if form.email.errors %}
+                    {{ form.email(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.email(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="text", id="orangeForm-name", class='form-control validate') }}
+                    {% endif %}
                 </div>
+
                 <div class="md-form">
                     <i class="fas fa-lock prefix orange-text"></i>
-                    {{ signup_modal_form.password(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="password", id="orangeForm-password", class='form-control validate') }}
-                    <label style='color:orangered' for="orangeForm-password">Your password</label>
+                    <label style='color:orangered' for="orangeForm-name">Your password</label>
+                    {% if form.password.errors %}
+                    {{ form.password(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="password", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.password(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="password", id="orangeForm-name", class='form-control validate') }}
+                    {% endif %}
                 </div>
+
                 <div class="md-form">
-                    <i class="fas fa-lock prefix orange-text"></i>
-                    {{ signup_modal_form.pass_confirm(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="password", id="orangeForm-pass_confirm", class='form-control validate') }}
-                    <label style='color:orangered' for="orangeForm-pass_confirm">Confirm your
-                        password</label>
+                    <i class="fas fa-user prefix orange-text"></i>
+                    <label style='color:orangered' for="orangeForm-name">Confirm your password</label>
+                    {% if form.pass_confirm.errors %}
+                    {{ form.pass_confirm(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="password", id="orangeForm-name", class='form-control is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.pass_confirm.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.pass_confirm(style='box-shadow: 0 1px 0 0 orange;border-bottom: 1px solid orangered;', type="password", id="orangeForm-name", class='form-control validate') }}
+                    {% endif %}
                 </div>
 
                 <div class="text-center py-4 mt-3">
-                    {{ signup_modal_form.submit(style='float: right; color:black', class='btn btn-deep-orange') }}
+                    {{ form.submit(style='float: right; color:black', class='btn btn-deep-orange') }}
                 </div>
             </form>
         </div>
