--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -32,9 +32,11 @@
                     <div style='text-shadow: 0 0.5px 0 #fff; font-weight: 500;' class="nav-link dropdown">
                         <!-- <a style="color:black;" href="/logout">User: {{ current_user.username }}</a> -->
                         <a style="color:black;" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">User: {{ current_user.username }}</a>
+                            aria-expanded="false">User: {{ current_user.username.capitalize() }}</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="/users/editprofile">My profile</a>
+                            <a class="dropdown-item" href="/users/eventscreated">Created
+                                events</a>
                         </div>
                     </div>
 
